# legal2akn

./: CLAUDE.md  main.py  pyproject.toml
legal2akn/: __init__.py  cli.py  converter.py  models.py  parser.py  pdf_parser.py
tests/: .gitignore  README.md
